<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.isekai.threeTabs.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.isekai.threeTabs.Favorites"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.isekai.threeTabs.Profile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>